# auditorium

./: .gitignore  PORTABILITY-AUDIT.md  README.md  SKILL-LOCATIONS.md  harness  pyproject.toml
Negative Parallelism Skills/: README.md  SKILL-LOCATIONS.md
The Auditorium/: README.md  SKILL-LOCATIONS.md
chatgpt-skill-packages/: agent-memory-architect.skill  agent-shape-selector.skill  handoff-ticket-designer.skill  model-routing-economist.skill  slop-pattern-auditor.skill  trust-verification-architect.skill
claude-skill-packages/: agent-memory-architect.skill  agent-shape-selector.skill  model-routing-economist.skill  qa-companion.skill  slop-pattern-auditor.skill  trust-verification-architect.skill
maintenance/: agent-maintenance-record.md
pipeline/: BUILD_COMPLETE  cycle-runbook.md  pipeline-spec.md  runs.jsonl  state-schema.md  state.json
prompts/: ftpo-training-orchestrator.megaprompt.md  ftpo-training-orchestrator.testmatrix.md  m1-ingest-state.megaprompt.md  m1-ingest-state.testmatrix.md  m2-detect-classify.megaprompt.md  m2-detect-classify.testmatrix.md  m3-rewrite-verify.megaprompt.md  m3-rewrite-verify.testmatrix.md  m4-review-console.megaprompt.md  m4-review-console.testmatrix.md  m5-report-compare-replay.megaprompt.md  m5-report-compare-replay.testmatrix.md
routing/: decision-table.md  routing-policy.md
scripts/: __init__.py  check.sh  generate_claude_skills.py  generate_local_s1_ftpo.py  generate_synthetic_ftpo.py  harness_cli.py  lint_skills.py  run_local_ftpo_experiment.py  run_prototype.py  split_ftpo_data.py  verify_evidence.py
(+171 files in other folders)
